# tilo-framework

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_v02_columns.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  agents.py  apps.py  artifacts.py  channels.py  confirmations.py  conversations.py  demo.py  feedback.py  interactions.py  memories.py  messages.py  projects.py  runs.py  skills.py  system.py  tasks.py  tools.py  workspaces.py
backend/app/core/: config.py  database.py  migrations.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: __init__.py  artifact.py  domain.py
backend/app/services/: bootstrap.py
backend/app/services/agent_context/: __init__.py  builder.py
backend/app/services/agent_runtime/: __init__.py  executor.py  message_flow.py  planner.py  prompt_builder.py  run_manager.py  state_machine.py
backend/app/services/apps/: __init__.py  loader.py  schemas.py
backend/app/services/artifact/: __init__.py  actions.py  contract_llm.py  generator.py  persistence.py  spec.py
backend/app/services/context_reflection/: __init__.py  schemas.py  service.py
backend/app/services/conversations/: __init__.py  messages.py  service.py
backend/app/services/demo/: __init__.py  contracts.py  followup_intent.py
backend/app/services/improvement/: __init__.py  candidates.py  metrics.py
backend/app/services/inbox/: __init__.py  confirmations.py
backend/app/services/interaction_policy/: __init__.py  schemas.py  service.py
backend/app/services/interactions/: events.py
backend/app/services/memory/: __init__.py  extraction.py  recall.py  writer.py
backend/app/services/models/: __init__.py  client.py  prompts.py  schemas.py
backend/app/services/skill/: __init__.py  selector.py
backend/app/services/surfaces/: __init__.py  rich_links.py
backend/app/services/tools/: __init__.py  invocation.py  registry.py
backend/app/services/trace/: __init__.py  recorder.py
backend/tests/: helpers.py  test_a2a_acp_adapters.py  test_agui_adapter.py  test_aip_generator.py  test_anthropic_adapter.py  test_apps_and_policy.py  test_artifact_action_runtime.py  test_artifact_spec.py  test_behaviour_memory.py  test_conversation_runtime.py  test_demo_contract.py  test_health_and_runtime.py  test_langchain_adapter.py  test_mcp_adapter.py  test_memory_lifecycle.py  test_model_runtime.py  test_openai_adapter.py  test_policy_runtime_integration.py  test_prompt_and_generate.py  test_run_streaming.py  test_smoke.py  test_surface_schema.py  test_viewer.py
backend/tilo/: __init__.py  cli.py  generate.py  main.py  prompt.py  viewer.py
backend/tilo/adapters/: __init__.py  a2a.py  acp.py  agui.py  anthropic_sdk.py  langchain.py  mcp.py  openai.py
backend/tilo/api/: deps.py
backend/tilo/api/routes/: __init__.py  agents.py  apps.py  artifacts.py  channels.py  confirmations.py  conversations.py  demo.py  feedback.py  interactions.py  memories.py  messages.py  playground.py  projects.py  runs.py  skills.py  system.py  tasks.py  tools.py  workspaces.py
backend/tilo/core/: config.py  database.py  migrations.py
backend/tilo/models/: __init__.py  domain.py
backend/tilo/schemas/: __init__.py  artifact.py  domain.py  surface.py
backend/tilo/services/: bootstrap.py
backend/tilo/services/agent_context/: __init__.py  builder.py
backend/tilo/services/agent_runtime/: __init__.py  executor.py  message_flow.py  planner.py  prompt_builder.py  run_manager.py  state_machine.py
backend/tilo/services/apps/: __init__.py  loader.py  schemas.py
backend/tilo/services/artifact/: __init__.py  actions.py  aip_generator.py  contract_llm.py  generator.py  persistence.py  spec.py
backend/tilo/services/channels/: __init__.py  types.py
backend/tilo/services/context_reflection/: __init__.py  service.py
backend/tilo/services/conversations/: __init__.py  constants.py  messages.py  service.py
backend/tilo/services/demo/: __init__.py
backend/tilo/services/improvement/: __init__.py  candidates.py  metrics.py
backend/tilo/services/inbox/: __init__.py  confirmations.py
backend/tilo/services/interaction_policy/: __init__.py  schemas.py  service.py
backend/tilo/services/interactions/: events.py
backend/tilo/services/memory/: __init__.py  behaviour.py  extraction.py  recall.py  writer.py
(+218 files in other folders)
