[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilo"
version = "0.1.0"
description = "Tilo — AI-native SaaS agent framework with long-term memory, structured artifacts, and human confirmation."
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agent", "framework", "memory", "artifact", "saas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
# `pip install tilo` gives you:
#   tilo serve     — start the API server
#   tilo init      — scaffold a new Tilo project
tilo = "tilo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tilo"]

[tool.pytest.ini_options]
pythonpath = ["."]
