[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilo"
version = "0.4.0"
description = "Turn any LLM into an interactive UI. One line of Python — no React, no frontend setup."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
keywords = ["ai", "agent", "llm", "ui", "openai", "anthropic", "langchain", "framework"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# Lean core — `pip install tilo` only pulls these. Enough for the hero path:
#   tilo.generate(...) → tilo.view(...)  and the AIPPromptBuilder / adapters.
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
# LLM provider SDKs — install the one you use:
#   pip install "tilo[openai]"  /  "tilo[anthropic]"  /  "tilo[langchain]"
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.2", "langchain-openai>=0.1"]
# The full backend runtime: FastAPI server, DB, migrations, /playground.
# Only needed for `tilo serve` and the ROAM-loop runtime — not for generate/view.
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
]
# Postgres driver (SQLite is the default — only for Postgres deployments):
postgres = ["psycopg[binary]>=3.1"]
# Everything:
all = [
  "openai>=1.0", "anthropic>=0.30", "langchain-core>=0.2", "langchain-openai>=0.1",
  "fastapi>=0.110", "uvicorn[standard]>=0.27", "sqlalchemy>=2.0", "alembic>=1.13",
  "pydantic-settings>=2.2", "httpx>=0.27", "psycopg[binary]>=3.1",
]
# Running the test suite exercises the server, so it includes the server deps.
test = [
  "pytest>=8.0",
  "fastapi>=0.110", "uvicorn[standard]>=0.27", "sqlalchemy>=2.0", "alembic>=1.13",
  "pydantic-settings>=2.2", "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/adam2go/tilo-framework"
Documentation = "https://github.com/adam2go/tilo-framework/tree/main/docs"
Repository = "https://github.com/adam2go/tilo-framework"
Changelog = "https://github.com/adam2go/tilo-framework/blob/main/CHANGELOG.md"

[project.scripts]
# `pip install tilo` gives you:
#   tilo demo      — open a sample surface in the browser
#   tilo generate  — (via Python) one line LLM → interactive UI
#   tilo serve     — start the API server + playground
#   tilo init      — scaffold a new Tilo project
tilo = "tilo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tilo"]

[tool.pytest.ini_options]
pythonpath = ["."]
